fix: enhance UX on small screen size (#3573)
see #1741

---------

--- a/src/app/core/entity-details/entity-bulk-actions/entity-bulk-actions.component.scss
+++ b/src/app/core/entity-details/entity-bulk-actions/entity-bulk-actions.component.scss
@@ -1,9 +1,16 @@
 @use "@angular/material/core/style/elevation" as mat-elevation;
+@use "variables/breakpoints";
 
 .overall-box {
   @include mat-elevation.elevation(3);
   padding: 1em;
   margin: 1em;
+
+  @media (max-width: breakpoints.$md) {
+    padding: 0.75em;
+    margin: 0.5em;
+    flex-wrap: wrap;
+  }
 }
 
 .bulk-action-select-wrapper {
@@ -12,6 +19,13 @@
   min-width: 320px;
   max-width: 700px;
   width: 400px; /* Fixed width for stability */
+
+  @media (max-width: breakpoints.$md) {
+    min-width: 0;
+    width: 100%;
+    max-width: 100%;
+    flex: 1 1 100%;
+  }
 }
 
 .bulk-action-autocomplete {
@@ -23,4 +37,15 @@
   min-width: 0;
   max-width: 100%;
   box-sizing: border-box;
+
+  // Ensure hint text wraps properly on small screens
+  ::ng-deep .mat-mdc-form-field-hint {
+    white-space: normal;
+    word-wrap: break-word;
+
+    @media (max-width: breakpoints.$md) {
+      font-size: 0.75rem;
+      line-height: 1.2;
+    }
+  }
 }
