--- a/src/app/core/setup/system-init-assistant/choose-use-case/choose-use-case.component.scss
+++ b/src/app/core/setup/system-init-assistant/choose-use-case/choose-use-case.component.scss
@@ -27,3 +27,8 @@
 .greyed-out {
   opacity: 0.5;
 }
+
+.min-width {
+  min-width: 240px;
+  margin-bottom: 0;
+}
